fix registrar tarifas

--- a/SGBI/SGBI.Api/appsettings.json
+++ b/SGBI/SGBI.Api/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "PostgreSQLConnection": "Server=127.0.0.1; Port=54320; Database=SGBI; User Id=postgres; Password=Cherry666"
+        "PostgreSQLConnection": "Server=127.0.0.1; Port=5432; Database=SGBI; User Id=postgres; Password=cherry"
     },
     "JWT": {
         "ValidAudience": "http://localhost:4200",
