Correo SGBI actualizado

--- a/SGBI-Backend/SGBI/SGBI.Api/appsettings.json
+++ b/SGBI-Backend/SGBI/SGBI.Api/appsettings.json
@@ -18,11 +18,12 @@
   },
   "AppBaseUrl": "http://localhost:4200",
   "EmailSettings": {
-    "From": "luisaguilarb.2003@gmail.com",
+    "From": "sgbi.municipalidad.atenas@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "luisaguilarb.2003@gmail.com",
-    "Password": "isyfnjgrzaabtejf"
+    "Username": "sgbi.municipalidad.atenas@gmail.com",
+    "Password": "sfpfntpmteklbpwk"
+
   },
   "AllowedHosts": "*"
 }
